# aether-game-utils

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AddBundle.cmake  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  acme.sh  aether-game-utils.code-workspace  aether.cpp  aether.h  aether.mm  aether_gl_wasm.h  build.bat  coverage_build.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
cmake/: AddBundle.cmake  AddExecutable.cmake  Config.cmake.in  FindGit.cmake  FindSDL2.cmake  Findassimp.cmake  MacOSXBundleInfo.plist.in.fix  config.h.in  git_revision.cmake  imgui.cmake  imguizmo.cmake  safeguards.cmake
docs/: Allocation.md  DataStructures.md  Math.md  Meta.md  _r_e_a_d_m_e_8md.html  aether_8h.html  aether_8h.js  aether_8h__incl.dot  aether_8h_source.html  annotated.html  annotated_dup.js  class_a_e___n_a_m_e_s_p_a_c_e_1_1_allocator-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_allocator.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_array-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_array.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_debug_lines-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_debug_lines.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_dict-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_dict.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_file_system-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_file_system.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_graphics_device-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_graphics_device.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_hash-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_hash.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_input-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_input.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_map-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_map.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_matrix4-members.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_matrix4.html  class_a_e___n_a_m_e_s_p_a_c_e_1_1_quaternion.html  (+292 more)
example/: 00_HelloWorld.cpp  01_Example.cpp  02_Sprites.cpp  03_Client.cpp  03_Server.cpp  04_NetObjectClient.cpp  04_NetObjectCommon.h  04_NetObjectServer.cpp  04_ReplicationClient.cpp  04_ReplicationCommon.h  04_ReplicationServer.cpp  05_TextInput.cpp  06_Triangle.cpp  07_Cube.cpp  08_Audio.cpp  09_Platformer2D.cpp  10_Splines.cpp  11_Terrain.cpp  12_Geometry.cpp  13_FileDialogs.cpp  14_Emscripten.cpp  15_OBJViewer.cpp  16_SkinnedMesh.cpp  17_IK.cpp  18_Editor.cpp  19_Mouse.cpp  20_RenderTarget.cpp  21_Instancing.cpp  CMakeLists.txt  Common.h  ReplicationClient.cpp  ReplicationCommon.h  ReplicationServer.cpp  client.cpp  example.cpp  server.cpp  sprites.cpp
example/14_Emscripten/: 14_Emscripten.cpp  CMakeLists.txt  library_js.js
example/16_Editor/: CMakeLists.txt
example/16_Editor/src/: aeEditor.cpp  aeEditor.h
example/data/: character.tga  level.tga  moon.tga  test.txt
examples/: 00_HelloWorld.cpp  01_Example.cpp  02_Sprites.cpp  03_Client.cpp  03_Server.cpp  04_NetObjectClient.cpp  04_NetObjectCommon.h  04_NetObjectServer.cpp  05_Text.cpp  05_TextInput.cpp  06_Triangle.cpp  06_Triangle.mm  07_Cube.cpp  08_Audio.cpp  09_Platformer2D.cpp  10_Splines.cpp  11_Terrain.cpp  12_Geometry.cpp  13_FileDialogs.cpp  14_Emscripten.cpp  15_OBJViewer.cpp  16_SkinnedMesh.cpp  17_IK.cpp  18_Editor.cpp  18_Game.cpp  18_SmallEngine.cpp  18_SmallEngine.h  19_Mouse.cpp  20_RenderTarget.cpp  21_Instancing.cpp  22_ReadMe.cpp  23_HotLoad.cpp  23_HotLoad.h  23_HotLoadable.cpp  23_Loader.cpp  23_SharedLibrary.cpp  24_HotLoad.cpp  24_HotLoad.h  24_HotLoadable.cpp  25_AStar.cpp  (+8 more)
examples/data/: Icon.icns  character.fbx  circle.tga  example.level  font.tga
extras/: CMakeLists.txt  Editor.cpp  Entity.cpp  MeshEditorPlugin.cpp  Resource.cpp  SpriteRenderer.cpp  aeCommonRender.cpp  aeCompactingAllocator.cpp  aeHotSpot.cpp  aeImGui.cpp  aeImage.cpp  aeResource.cpp  aeTerrain.cpp  aeTerrainSDF.cpp
extras/include/ae/: Editor.h  Entity.h  MeshEditorPlugin.h  Reference.h  Resource.h  SpriteRenderer.h  aeCompactingAllocator.h  aeHotSpot.h  aeImGui.h  aeImage.h  aeInitializer.h  aeInventoryGrid.h  aeRef.h  aeRender.h  aeSignal.h  aeSparseGrid.h  aeTerrain.h
loaders/: CMakeLists.txt  ofbx.cpp  stb.cpp  stb_image.h
loaders/include/ae/: loaders.h
misc/: CMakeLists.txt  Editor.cpp  Editor.h  EmSocket.cpp  Entity.cpp  aeCommonRender.cpp  aeCompactingAllocator.cpp  aeHotSpot.cpp  aeImage.cpp  aeImage.h  aeNet.h  aeNetClient.cpp  aeNetServer.cpp  aeTerrain.cpp  aeTerrain.h  aeTerrainSDF.cpp  aeTesting.cpp  aeUuid.cpp  aether.cpp  aether.mm  loaders.h
misc/ae/: Entity.h  aeHotSpot.h  aeImGui.h  aeInitializer.h  aeNet.h  aeRef.h  aeRender.h  aeRingBuffer.h
misc/loaders/: ofbx.cpp  stb.cpp
net/: CMakeLists.txt  EmSocket.cpp  aeNetClient.cpp  aeNetServer.cpp  aeUuid.cpp
net/include/ae/: EmSocket.h  aeNet.h  aeUuid.h
src/: CMakeLists.txt  Editor.cpp  Entity.cpp  aeAlloc.cpp  aeAlloc.h  aeArray.h  aeAudio.cpp  aeBinaryStream.cpp  aeBinaryStream.h  aeClock.cpp  aeClock.h  aeCommand.h  aeCommandLineArgs.cpp  aeCommandLineArgs.h  aeCommonRender.cpp  aeCommonRender.h  aeCompactingAllocator.cpp  aeDict.cpp  aeDict.h  aeEditorCamera.cpp  aeFileDialog.cpp  aeHotSpot.cpp  aeImage.cpp  aeInitializer.h  aeInput.cpp  aeInput.h  aeInventoryGrid.h  aeList.h  aeLog.cpp  aeLog.h  aeMap.h  aeMath.cpp  aeMath.h  aeMesh.cpp  aeMesh.h  aeMeta.cpp  aeMeta.h  aeNet.cpp  aeNet.h  aeNetClient.cpp  (+28 more)
src/loaders/: ofbx.cpp  stb.cpp
test/: AnyTest.cpp  ArrayTest.cpp  Attributes.cpp  AttributesTest.cpp  AttributesTest.h  AttributesTest2.cpp  CMakeLists.txt  DictTest.cpp  DocumentTest.cpp  FileTest.cpp  FunctionTest.cpp  GeometryTest.cpp  IKTest.cpp  IKTest.h  ListTest.cpp  LogTest.cpp  MacroTest.cpp  MapTest.cpp  MapTest.h  MapTest32.cpp  MapTest64.cpp  MathTest.cpp  MetaTest.cpp  MetaTest.h  MetaTest2.cpp  MetaTest3.cpp  MiscTest.cpp  NetTest.cpp  OptionalTest.cpp  PoolTest.cpp  RefTest.cpp  ReferenceTest.cpp  RingBufferTest.cpp  ScratchTest.cpp  SerializeTest.cpp  SignalTest.cpp  StringTest.cpp  TestConfig.h  TestUtils.cpp  TestUtils.h  (+7 more)
test/attributes/: Attributes.cpp  CMakeLists.txt
(+245 files in other folders)
